Fixed spacing between toolbar items

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -25,6 +25,7 @@ body {
     display: inline;
     border: 3px solid black;
     padding: 5px;
+    margin-left: 5px;
 }
 
 .Footer {
